//定义版本
syntax = "proto3";

package net.hserver.hp.common.protocol;

option java_outer_classname="HpMessageData";
option go_package = "./HpMessage";

message HpMessage{

  //枚举消息类型
  enum HpMessageType
  {
      REGISTER=0;
      REGISTER_RESULT=1;
      CONNECTED=2;
      DISCONNECTED=3;
      DATA=4;
      KEEPALIVE=5;
  }

  message MetaData{
    int32 port=1;
    string username=2;
    string password=3;
    string domain=4;
    string channelId=5;
    bool success=6;
    string reason=7;
  }

  //消息类型
  HpMessageType type = 1;
  //元数据
  MetaData metaData = 2;
  //穿透真实数据流
  bytes data=3;
}

